# uwr-training

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  render.yaml
api/: README.md  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 00ec41fc2692_add_exercises.py  086223921e84_add_weeks.py  0c88aae1b52d_add_session_logs.py  (+27 more)
api/app/: auth.py  cli.py  db.py  errors.py  health.py  main.py  models.py  pagination.py  security.py  settings.py  storage.py  week_progress.py
tests/: conftest.py  pyproject.toml
tests/auth/: test_accept_invitation.py  test_invitation_regenerate.py  test_login.py  test_password_reset.py  test_sidebar.py  test_toasts.py  test_user_activation.py  test_user_detail.py  test_user_test_logs.py  test_user_training_logs.py  test_users.py  test_users_filters.py  test_users_pagination.py  test_users_search.py  test_users_url_state.py
tests/bodyweight/: test_bodyweight_logs.py
tests/cardio/: test_cardio_crud.py  test_cardio_logs.py  test_cardio_timer.py
tests/exercises/: test_create_exercise.py  test_edit_delete_exercise.py  test_exercise_detail.py  test_exercise_media.py  test_exercise_parameters.py  test_exercises_directory.py  test_exercises_url_state.py  test_gym_facilities.py  test_gym_materials.py  test_markdown_description.py  test_related_exercises.py
tests/tests_section/: test_speed_test_chart.py  test_speed_test_log.py  test_speed_test_page.py  test_strength_test_admin.py  test_strength_test_log.py  test_strength_test_page.py
tests/trainings/: test_copy_training.py  test_create_training.py  test_register_facilities.py  test_register_materials.py  test_register_session.py  test_session_log_week.py  test_session_logs.py  test_training_blocks.py  test_training_detail.py  test_training_exercise_items.py  test_training_exercise_panel.py  test_training_items.py  test_training_load.py  test_training_sub_blocks.py  test_trainings_list.py  test_trainings_reorder.py  test_update_delete_training.py
tests/weeks/: test_week_progress.py  test_weeks_crud.py
(+249 files in other folders)
